@@ -99,19 +99,4 @@ public class EndTurnDelegate extends AbstractEndTurnDelegate
         }
 
     }
-
-    /**
-     * Returns the state of the Delegate.
-     */
-    public Serializable saveState()
-    {
-        return null;
-    }
-    
-    /**
-     * Loads the delegates state
-     */
-    public void loadState(Serializable state)
-    {}
-
 }
